--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link type="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Hello World!</h1>
+  <h1>Hello World!</h1>
 </body>
 </html>
